# controllers/grade.controller.js
@@ -1,18 +1,19 @@
 const { gradeService, wordService } = require('../services')
+const fs = require('fs');
 
 const { createPetGrade, createFceGrade, createCaeGrade, createPlacementTestGrade } = gradeService;
 const { createWordFile } = wordService;
 
 const postPetGrade = async (req, res, next) => {
-    try {        
+    try {
         var grades = createPetGrade(req.body);
         var docx = createWordFile(grades);
 
         res.writeHead(200, {
             "Content-Type": "application/vnd.openxmlformats-officedocument.documentml.document",
             'Content-disposition': `attachment; filename=${grades.student}.docx`
-        });        
-        docx.generate(res);        
+        });
+        docx.generate(res);
         next()
     } catch (e) {
         console.log(e.message)
@@ -55,15 +56,15 @@ const postCaeGrade = async (req, res, next) => {
 }
 
 const postPlacementTestGrade = async (req, res, next) => {
-    try {     
-        console.log(req.body.Writing.Grade);   
+    try {
+        console.log(req.body.Writing.Grade);
         var grades = createPlacementTestGrade(req.body);
         var docx = createWordFile(grades);
 
         res.writeHead(200, {
             "Content-Type": "application/vnd.openxmlformats-officedocument.documentml.document",
             'Content-disposition': `attachment; filename=${grades.student}.docx`
-        });        
+        });
         docx.generate(res);
         next()
     } catch (e) {
@@ -72,9 +73,26 @@ const postPlacementTestGrade = async (req, res, next) => {
     }
 }
 
+const postUploadFile = async (req, res, next) => {
+    var fstream;
+    req.pipe(req.busboy);
+    req.busboy.on('file', function (fieldname, file, filename) {
+        console.log("Uploading: " + filename);
+
+        //Path where image will be uploaded
+        fstream = fs.createWriteStream('./Grades.xlsx');
+        file.pipe(fstream);
+        fstream.on('close', function () {
+            console.log("Upload Finished of " + filename);
+            res.redirect('back');           //where to go next
+        });
+    });
+}
+
 module.exports = {
     postPetGrade,
     postFceGrade,
     postCaeGrade,
-    postPlacementTestGrade
+    postPlacementTestGrade,
+    postUploadFile
 }
